umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@chem3d_aromaticRings.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 94, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 94, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C85N3O4PS4-
    atom_count: 99
    bond_count: 115
    extended_atoms: 2
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C85N3O4PS4-
    atom_count: 99
    bond_count: 115
    extended_atoms: 2
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
